--- a/assets/style.css
+++ b/assets/style.css
@@ -66,3 +66,38 @@ header button{
   /* float: right; */
 }
 
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.modal-content {
+  background-color: black;
+  color: white;
+  margin: 15% auto;
+  /* padding: 20px; */
+  border: 1px solid firebrick;
+  width: 80%;
+
+}
+
+.close {
+  color: firebrick;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: grey;
+  text-decoration: none;
+  cursor: pointer;
+}
+
