--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,10 @@ body {
   margin: auto;
 }
 
+h2 {
+  font-size: 2em;
+}
+
 #guitar-container {
   display: flex;
   flex-wrap: wrap;
@@ -28,7 +32,7 @@ body {
 
 .guitar-card {
   border: 3px solid var(--bg-color);
-  margin: 1em;
+  margin: .5em;
 }
 
 .guitar-card p {
@@ -58,6 +62,7 @@ header {
 }
 button{
   font-family: var(--font-family);
+  cursor: pointer;
 }
 
 header button{
@@ -67,7 +72,8 @@ header button{
 }
 
 .modal {
-  /* display: none; */
+  display: none;
+  font-family: monospace;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -82,13 +88,14 @@ header button{
   color: white;
   margin: 15% auto;
   /* padding: 20px; */
-  border: 1px solid firebrick;
+  border: 1px solid red;
+  border-radius: 1ch;
   width: 80%;
 
 }
 
 .close {
-  color: firebrick;
+  color: red;
   float: right;
   font-size: 28px;
   font-weight: bold;
