adjust name from class to id

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,13 +119,13 @@ button#account-button {
   cursor: pointer;
 }
 
-.delete-guitar {
+#delete-guitar {
   color: red;
-  font-size: 28px;
+  font-size: 12px;
   font-weight: bold;
 }
 
-.delete-guitar:hover, .delete-guitar:focus {
+#delete-guitar:hover, #delete-guitar:focus {
   color: grey;
   text-decoration: none;
   cursor: pointer;
